5.4. Практические навыки работы с Docker